--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
             
             - name: Start Containers
               run: |
-                docker-compose -f docker-compose.yml up -d
+                docker compose -f docker-compose.yml up -d
                 echo "Containers started successfully."
                 sleep 15
             - name: Check running containers
@@ -23,4 +23,4 @@ jobs:
 
             - name: Stop Containers
               if: always()
-              run: docker-compose -f docker-compose.yml down
+              run: docker compose -f docker-compose.yml down
