--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,184 +1,79 @@
-version: '3.8'
-
+version: '3'
 services:
-  # PostgreSQL Database for DBT and Airflow
   postgres:
     image: postgres:13
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
       POSTGRES_DB: airflow
-    volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: airflow
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "airflow"]
-      interval: 5s
-      retries: 5
-    restart: always
-
-  # Redis for Airflow Celery
-  redis:
-    image: redis:latest
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 30s
-      retries: 50
-    restart: always
-
-  # Simple single-container mode: Airflow + DBT
-  airflow:
-    #profiles: ["simple"]
+      - "5433:5432"
+  webserver:
     build:
       context: .
       dockerfile: Dockerfile
-      target: airflow_simple
-    depends_on:
-      - postgres
-      - redis
+      target: airflow
+    restart: always
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CORE__LOAD_EXAMPLES=False
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=True
+      - AIRFLOW__WEBSERVER__SECRET_KEY=mysecretkey
+      - AIRFLOW__CORE__FERNET_KEY=GgyJ5jUehSy2zQqY958eUWW1ezEgNp4OerBy-AKuD14=
+      - DBT_PROFILES_DIR=/opt/airflow/snowflake_data_project/profiles
+      - PYTHONPATH=/opt/airflow
     volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/logs:/opt/airflow/logs
       - ./dbt:/opt/airflow/dbt
-    ports:
-      - "8081:8080"
-    restart: always
-    command: webserver
-
-  # Airflow Webserver
-  airflow-webserver:
-    #profiles: ["full"]
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: airflow
-    depends_on:
-      - postgres
-      - redis
-    environment:
-      - AIRFLOW__CORE__EXECUTOR=CeleryExecutor
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=True
-      - AIRFLOW__CORE__LOAD_EXAMPLES=False
-      - AIRFLOW__API__AUTH_BACKEND='airflow.api.auth.backend.basic_auth'
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-      - ./dbt:/opt/airflow/dbt
+      - ./dbt_airflow:/opt/airflow/dbt_airflow
     ports:
       - "8080:8080"
-    healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
-    restart: always
+    entrypoint: /Airflow.sh
     command: webserver
+    depends_on:
+      - dbt
+      - postgres
 
-  # Airflow Scheduler
-  airflow-scheduler:
-    #profiles: ["full"]
+  scheduler:
     build:
       context: .
       dockerfile: Dockerfile
       target: airflow
-    depends_on:
-      - postgres
-      - redis
-    environment:
-      - AIRFLOW__CORE__EXECUTOR=CeleryExecutor
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
-      - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=True
-      - AIRFLOW__CORE__LOAD_EXAMPLES=False
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-      - ./dbt:/opt/airflow/dbt
     restart: always
-    command: scheduler
-
-  # Airflow Worker
-  airflow-worker:
-    #profiles: ["full"]
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: airflow
-    depends_on:
-      - postgres
-      - redis
     environment:
-      - AIRFLOW__CORE__EXECUTOR=CeleryExecutor
+      - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
+      - AIRFLOW__WEBSERVER__SECRET_KEY=mysecretkey
+      - AIRFLOW__CORE__FERNET_KEY=GgyJ5jUehSy2zQqY958eUWW1ezEgNp4OerBy-AKuD14=
+      - DBT_PROFILES_DIR=/opt/airflow/snowflake_data_project/profiles
+      - PYTHONPATH=/opt/airflow
     volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
+      - ./airflow/dags:/opt/airflow/dags
+      - ./airflow/logs:/opt/airflow/logs
       - ./dbt:/opt/airflow/dbt
-    restart: always
-    command: celery worker
-
-  # Airflow Flower (Monitoring)
-  airflow-flower:
-    #profiles: ["full"]
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: airflow
+      - ./dbt_airflow:/opt/airflow/dbt_airflow
     depends_on:
+      - dbt
       - postgres
-      - redis
-    environment:
-      - AIRFLOW__CORE__EXECUTOR=CeleryExecutor
-      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
-      - AIRFLOW__CELERY__BROKER_URL=redis://:@redis:6379/0
-      - AIRFLOW__CORE__FERNET_KEY=''
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-      - ./dbt:/opt/airflow/dbt
-    ports:
-      - "5555:5555"
-    restart: always
-    command: celery flower
 
-  # DBT Service
+      # DBT Service
   dbt:
-    #profiles: ["full"]
     build:
       context: .
       dockerfile: Dockerfile
       target: dbt
     depends_on:
-      - postgres
-    environment:
-      - DBT_PROFILES_DIR=/opt/dbt/profiles
+      - db
     volumes:
       - ./dbt:/opt/dbt
       - ./dbt/profiles:/opt/dbt/profiles
     working_dir: /opt/dbt
     restart: always
-
-volumes:
-  postgres-db-volume:
+    entrypoint: /dbt.sh
+    command: tail -f /dev/null
