--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -12,7 +12,7 @@ profile: 'my_dbt_project'
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
-model-paths: ["models"]
+model-paths: ["my_dbt_project/models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
@@ -35,4 +35,6 @@ models:
   my_dbt_project:
     # Config indicated by + and applies to all files under models/example/
     example:
+      +materialized: view
+    staging:
       +materialized: view
