--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -12,7 +12,7 @@ profile: 'my_dbt_project'
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
-model-paths: ["my_dbt_project/models"]
+model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
@@ -38,3 +38,5 @@ models:
       +materialized: view
     staging:
       +materialized: view
+    marts:
+      +materialized: table
