--- a/requirements-ariflow.txt
+++ b/requirements-ariflow.txt
@@ -3,3 +3,7 @@ psycopg2-binary==2.9.6
 apache-airflow-providers-postgres==5.1.0
 apache-airflow-providers-common-sql==1.3.0
 python-dotenv==0.21.1  # Latest compatible version
+dbt-core==1.4.0
+dbt-postgres==1.4.0
+pydantic>=1.10.4
+pytz
